// Copyright 2017 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package crimson;

// A machine in the database.
message Machine {
  // The name of this machine. Uniquely identifies this machine.
  string name = 1;
  // The type of platform this machine is.
  string platform = 2;
  // The rack this machine belongs to.
  string rack = 3;
  // A description of this machine.
  string description = 4;
  // The asset tag associated with this machine.
  string asset_tag = 5;
  // The service tag associated with this machine.
  string service_tag = 6;
  // The deployment ticket associated with this machine.
  string deployment_ticket = 7;
}

// CreateMachineRequest is a request to create a new machine in the database.
message CreateMachineRequest {
  // The machine to create in the database.
  Machine machine = 1;
}

// DeleteMachineRequest is a request to delete a machine from the database.
message DeleteMachineRequest {
  // The name of the machine to delete.
  string name = 1;
}

// ListMachinesRequest is a request to list machines in the database.
message ListMachinesRequest {
  // The names of machines to get.
  repeated string names = 1;
  // TODO(smut): Add the rest of the filters.
}

// ListMachinesResponse is a response to a request to list machines.
message ListMachinesResponse {
  // The machines matching this request.
  repeated Machine machines = 1;
  // TODO(smut): Support page tokens.
}
